--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@ Mégis, külföldön élő magyarként mindig marad bennünk egy kis hiányérze
 	</div>
 	<br><p class="bigger-p-2 col-md-8">Weboldalunk erre a problémára kíván megoldást nyújtani. A célunk, hogy népszerűsítsük a magyar kisvállalkozásokat, és létrehozzunk egy olyan gyűjtőhelyet, ahol bárki megtalálhatja ezeket egy helyen.
 Reméljük, te is hasznosnak és inspirálónak találod majd oldalunkat - és ne feledd, ha úgy érzed, valamit kihagytunk, de itt lenne a helye, lépj kapcsolatba velünk.</p>
-	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div>
+<!-- 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div> -->
 	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Írj nekünk emailt</a></div>
 	</div>
 
