--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -66,12 +66,17 @@
 	<h1>Privacy policy</h1>
 
 	<p class="bigger-p-2 description-2 col-md-8">Please read this Privacy policy (the "Privacy Policy") carefully before using the <a href="https://hun-made.com/" target=”blank”>https://hun-made.com/</a> website (the “Website”). This Privacy Policy contains types of information that is collected and recorded by Hun-made and how we use it.</p>
-	<h2>Log Files</h2>
+
+	<h2>Log Files & Cookies</h2>
+	<p class="bigger-p-2 description-2 col-md-8">This website does not use cookies to collect any infromation about its users.</p>
+	
+	
+<!-- 	<h2>Log Files</h2>
 		<p class="bigger-p-2 description-2 col-md-8">Hun-made follows a standard procedure of using log files. These files log visitors when they visit websites. The information collected by log files includes internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
 		<h2>Cookies</h2>
 		<p class="bigger-p-2 description-2 col-md-8">Like any other website, Hun-made uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.
 		<br><p class="bigger-p-2 description-2 col-md-8">For more general information on cookies, please read the "What Are Cookies" article on the <a href="https://www.cookieconsent.com/what-are-cookies/" target=”blank”>Cookie Consent website</a>.</p>
-		<br><p class="bigger-p-2 description-2 col-md-8">You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+		<br><p class="bigger-p-2 description-2 col-md-8">You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p> -->
 
 		<h2>Third Party Privacy Policies</h2>
 		<p class="bigger-p-2 description-2 col-md-8">Hun-made's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party providers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</p>
