--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,12 +61,17 @@
 <div class="hero-container-2">
 	<h1>Adatvédelmi irányelvek</h1>
 	<p class="bigger-p-2 description-2 col-md-8">Kérjük, a <a href="https://hun-made.com/" target=”blank”>https://hun-made.com/</a> weboldal használata előtt gondosan olvasd el Adatvédelmi irányelveinket (az "Irányelvek", "Adatvédelmi irányelvek"), mely információkat tartalmaz arra vonatkozóan, hogy milyen adatokat gyűjtünk és tárolunk a weboldalunk (a “Weboldal”) látogatóiról, és hogyan használjuk fel azokat.</p>
-	<h2>Naplófájlok</h2>
+
+	
+	<h2>Naplófájlok, sütik</h2>
+	<p class="bigger-p-2 description-2 col-md-8">Ez a weboldal nem gyűjt felhasználói adatokat.</p>
+	
+	<!-- 	<h2>Naplófájlok</h2>
 		<p class="bigger-p-2 description-2 col-md-8">Weboldaunk naplófájlok segítségével tartja számon látogatóit, amikor azok a Weboldalra érkeznek. A naplófájlok által gyűjtött információk az alábbiakat tartalmazzák: IP címek, böngésző típusa, internetszolgáltató, dátum és idő, érkezési és kilépési oldalak, kattintások száma. A hun-made.com ezeket az információkat semmilyen módon nem tudja összekötni személyes azonosításra alkalmas információkkal. Az információgyűjtés fő célja: webhely adminisztráció, trendek elemzése, demográfiai információk elemzése.</p>
 		<h2>Sütik használata</h2>
 		<p class="bigger-p-2 description-2 col-md-8">Mint bármely más website, a hun-made is sütiket (cookie-kat) használ az információk tárolására. Ezek a sütik többek között a látogatók webhellyel kapcsolatos preferenciáira és tevékenységükre vonatkozó információkat tárolnak (pl. melyik oldalakon járt a látogató, és hova kattintott). Ezen információkat a weboldallal kapcsolatos élmény optimalizálására, személyre szabására használjuk.</p>
 		<br><p class="bigger-p-2 description-2 col-md-8">A sütikkel kapcsolatos további információkért kérjük olvasd el a <a href="https://hu.wikipedia.org/wiki/HTTP-s%C3%BCti" target="blank">"HTTP-süti"</a> Wikipédia bejegyzést.</p>
-		<br><p class="bigger-p-2 description-2 col-md-8">Amennyiben le szeretnéd tiltani a sütik használatát, azt a saját böngésződben teheted meg. Erre vonatkozó információkat böngésződ általános ismertetőjében találsz.</p>
+		<br><p class="bigger-p-2 description-2 col-md-8">Amennyiben le szeretnéd tiltani a sütik használatát, azt a saját böngésződben teheted meg. Erre vonatkozó információkat böngésződ általános ismertetőjében találsz.</p> -->
 
 		<h2>Harmadik felek adatvédelmi irányelvei</h2>
 		<p class="bigger-p-2 description-2 col-md-8">A hun-made.com Irányelvei nem vonatkoznak semelyik másik weboldalra vagy hirdetőre, ezért javasoljuk, hogy az ezekre vonatkozó adatvédelmi információkról mindig az adott helyen tájékozódj.</p>
