--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -68,7 +68,7 @@
 	<p class="bigger-p-2 description-2 col-md-8">Please read this Privacy policy (the "Privacy Policy") carefully before using the <a href="https://hun-made.com/" target=”blank”>https://hun-made.com/</a> website (the “Website”). This Privacy Policy contains types of information that is collected and recorded by Hun-made and how we use it.</p>
 
 	<h2>Log Files & Cookies</h2>
-	<p class="bigger-p-2 description-2 col-md-8">This website does not use cookies to collect any infromation about its users.</p>
+	<p class="bigger-p-2 description-2 col-md-8">This website does not collect infromation about its users.</p>
 	
 	
 <!-- 	<h2>Log Files</h2>
