--- a/about-en.html
+++ b/about-en.html
@@ -73,7 +73,7 @@
 	<br><p class="bigger-p-2">This is all great but we've always felt that something is missing: what about the people and great achievements of today's Hungary? Why does no one know about that? We believe that better showcasing the creative business ideas, ingenious arts and crafts that Hungarian entrepreneurs create, will help us add a new cliché to the well-known ones, something like this: "creative and talented Hungarians".</p>
 	</div>
 	</div>
-	<br><p class="bigger-p-2 col-md-8">And, as a big plus, it gives you the opportunity to find local suppliers and products more easily thus shop more sustainably. Browse among Hungarian small businesses and their ingenious products. Help us expand this list: if you know of a similar great idea, fill out our form.</p>
+	<br><p class="bigger-p-2 col-md-8">And, as a big plus, it gives you the opportunity to find local suppliers and products more easily thus shop more sustainably. Browse among Hungarian small businesses and their ingenious products.</p>
 <!-- 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></div> -->
 	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Send us an email</a></div>
 	</div>
